WIP corrected size of SVG, but it's still not responsive

--- a/components/04-molecules/visual-elements/slider/_slider.scss
+++ b/components/04-molecules/visual-elements/slider/_slider.scss
@@ -33,8 +33,9 @@
 .page__number__box {
   position: absolute;
   top: 4%;
-  width: 2%;
-  margin: auto;
+  width: 10%;
+  margin-right: 3%;
+  margin-left: 90%;
 }
 
 .page__number {
